tests: add instances test

--- a/appl/meson.build
+++ b/appl/meson.build
@@ -47,6 +47,7 @@ ir_apps = [
 # these apps are meant to run on real hardware and are compiled into an elf
 hw_apps = [
   'rtas20_example',
+  'instances',
   'simple_print',
   'simple_delay',
   'simple_queue_send',
