--- a/appl/Zephyr/dyn_pipe/CMakeLists.txt
+++ b/appl/Zephyr/dyn_pipe/CMakeLists.txt
@@ -3,7 +3,7 @@
 cmake_minimum_required(VERSION 3.13.1)
 
 find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
-project(sthread)
+project(dyn_pipe)
 
 target_sources(app PRIVATE src/main.c)
 
