zephyr: added detection of heaps

--- a/appl/Zephyr/meson.build
+++ b/appl/Zephyr/meson.build
@@ -2,12 +2,14 @@
 # Apps that run on virtually any board since there are no hw dependencies
 z_easy_apps = [
     'cpp_sems',
+    'dyn_heap',
     'dyn_pipe',
     'dyn_queue',
     'dyn_stack',
     'dyn_sys_sems',
     'dyn_sems',
     'minimal',
+    'static_heap',
     'static_pipe',
     'static_queue',
     'static_sems',
