ara_tester: switch to gpslogger

--- a/meson.build
+++ b/meson.build
@@ -140,7 +140,7 @@ if get_option('enable_toplevel_tests')
     extra_settings = files('test' / 'extra_settings.json')
     test('ara_tester',
        py3_inst,
-       args: [ara_py, librepilot_application,
+       args: [ara_py, gpslogger_application,
               '--log-level', 'warn', '--runtime-stats', '--runtime-stats-file', 'dump', '--runtime-stats-format', 'json',
               '--step-settings', extra_settings,
               '--manual-corrections', instance_corrections],
