--- a/settings/meson.build
+++ b/settings/meson.build
@@ -124,7 +124,7 @@ ara_gen_cmd = [py3_inst, ara_py,
               ]
 
 
-ara_gen_freertos_targets = ['passthrough',
+ara_gen_freertos_targets = [#'passthrough',
                             'vanilla',
                             'instances_full_static',
                             'instances_full_initialized',
