--- a/appl/Zephyr/app_kernel/prj.conf
+++ b/appl/Zephyr/app_kernel/prj.conf
@@ -13,4 +13,5 @@ CONFIG_FORCE_NO_ASSERT=y
 CONFIG_TEST_HW_STACK_PROTECTION=n
 CONFIG_HW_STACK_PROTECTION=n
 
-CONFIG_COMPILER_OPT="-O0"
+CONFIG_NO_OPTIMIZATIONS=y
+
