Transition from ValueAnalysis to inline ValueAnalyzer
Before this commit, the value analysis was done as preprocessing step
for all syscalls at once. Now it is done directly, when needed.
Typically, this is as part of the OS model.

As part of the transition the syscall decorator is replaced with
syscall2 which also assigns the argument names and triggers the value
analysis.

What is further done is an assignment of system objects within the SVFG
i.e. in an extra map. This map is currently not globally stored but as
side data of the value analyzer.

Also, the traversal method of the SVFG changed. Before, it was more less
a depth first search. Now it is more less a breadth first search.

--- a/ara/graph/cgraph/meson.build
+++ b/ara/graph/cgraph/meson.build
@@ -6,7 +6,7 @@ graph_inc = include_directories('.')
 graph_data_pyx = custom_target('graph_data_pyx',
   output: ['graph_data_pyx.cpp', 'graph_data_pyx.h'],
   input: files('graph_data.pyx'),
-  depend_files: files('cgraph.pxd', 'graph_data.pxd', 'arguments.pxd', 'os.pxd'),
+  depend_files: files('cgraph.pxd', 'graph_data.pxd', 'carguments.pxd', 'os.pxd', 'cy_helper.pxd'),
   command: [cython, '-I', graph_cython_inc, '-I', common_cython_inc, '-I', pyllco_cython_inc, '@INPUT@', '-o', '@OUTPUT0@'] + cython_flags,
 )
 graph_data_pyx_header = graph_data_pyx[1]
