--- a/ara/common/meson.build
+++ b/ara/common/meson.build
@@ -11,7 +11,7 @@ common_inc = include_directories('.')
 common_cython_inc = meson.current_source_dir()
 common_cython_files = files('common/__init__.pxd',
                             'common/cy_helper.pxd',
-                            'common/move.pxd')
+                            'common/backported_utility.pxd')
 
 common_dep = declare_dependency(link_with: libcommon,
                                 dependencies: common_dependencies,
