--- a/ara/steps/native/meson.build
+++ b/ara/steps/native/meson.build
@@ -39,9 +39,10 @@ step_pyx_gen = custom_target('step_pyx',
                  'option.pxd',
                  'cy_helper.pxd',
                  'cstep.pxd',
-                 'backported_utility.pxd',
                  'replace_syscalls_create.pxd',
-                 'replace_syscalls_create.pxi') + test_pxd + common_cython_files],
+                 'replace_syscalls_create.pxi',
+                 'value_analyzer.pxd',
+                 'value_analyzer.pxi') + test_pxd + common_cython_files],
   command : [cython, '-I', graph_cython_inc, '-I', common_cython_inc, '-I', pyllco_cython_inc, '-I', step_dir, '@INPUT0@', '-o', '@OUTPUT0@'] + cython_flags,
   depend_files: [conf_file],
 )
@@ -80,7 +81,8 @@ step_mod = py3_inst.extension_module('step',
         'resolve_function_pointer.cpp',
         'svf_analyses.cpp',
         'svf_transformation.cpp',
-        'value_analysis.cpp') + test_sources,
+        'value_analysis.cpp',
+        'value_analyzer.cpp') + test_sources,
   cpp_pch: 'pch/steps_pch.h',
   dependencies: [log_dep, py3_inst.dependency(), llvm_dep, graph_tool_dep, graph_dep, common_dep, pyllco_dep, svf_dep, cudd_dep]
 )
