Created a new POSIX appl called simple_project. Implemented support for complex POSIX applications in the POSIX build Makefile

--- a/appl/POSIX/Makefile
+++ b/appl/POSIX/Makefile
@@ -1,9 +1,25 @@
 # 
 # - Makefile to compile all POSIX applications -
 #
-# Make sure you have ara-link compiled before you build
+# Make sure you have ara-link compiled before you build.
+# Make sure $(MUSL_LIB_C_SRC_PATH) specifies the correct path to your local Musl Lib-C source dir.
+#
+# HOW TO:
+#
+# - add a new single source file application:
+# 		Just simply create the file in this directory.
+#		The name of the project is the filename.
+#
+# - add a new complex application: 
+#		Write the name of the project in the $(PROJECT_NAMES) list.
+#		Create new rules in this Makefile to build the project to a .ll file.
+#
+# Note: The destination file for all applications is <project name>.ll in $(POSIX_BUILD)
 
 SHELL := /bin/bash
+
+# Add here new project names
+PROJECT_NAMES = simple_project
 
 # Change this vars to specify another path
 MUSL_LIB_C_SRC_PATH = ~/Downloads/musl-1.2.2
@@ -13,26 +29,49 @@ ARA_LINK = ../../subprojects/ara-link/build/ara-link
 POSIX_BUILD = $(BUILD_DIR)/appl/POSIX
 OBJ_BUILD = $(POSIX_BUILD)/objs
 
+AWK_TO_TARGET = awk '{ print "$(POSIX_BUILD)/" $$0 ".ll" }'
+PROJECT_TARGETS = $(shell echo $(PROJECT_NAMES) | $(AWK_TO_TARGET))
+
 # Generate list of targets.
 # These are all .c files in this dir but with file expansion .ll instead and located in the POSIX build dir.
-TARGETS = $(shell (find *.c | cut -f 1 -d '.') | awk '{ print "$(POSIX_BUILD)/" $$0 ".ll" }')
+# PROJECT_TARGETS will be added to the list of targets.
+TARGETS = $(shell (find *.c | cut -f 1 -d '.') | $(AWK_TO_TARGET)) $(PROJECT_TARGETS)
 
 CC = clang
 CFLAGS = -g -O0 -S -emit-llvm
-
+CREATE_DEST_DIR = mkdir -p $(@D)
 
 all: $(TARGETS)
-.PHONY: all
+
+clean:
+	rm -r $(POSIX_BUILD)/*
+
+.PHONY: all clean
 
 # Link POSIX applications with musl lib c
 $(TARGETS): $(POSIX_BUILD)/%.ll : $(OBJ_BUILD)/%.ll $(POSIX_BUILD)/musl_libc.ll
-	@mkdir -p $(@D)
+	@$(CREATE_DEST_DIR)
 	$(ARA_LINK) -S -o $@ $< $(POSIX_BUILD)/musl_libc.ll
 
-# Compile POSIX C files
+# Compile simple POSIX C files
 $(OBJ_BUILD)/%.ll: %.c
-	@mkdir -p $(@D)
+	@$(CREATE_DEST_DIR)
 	$(CC) $(CFLAGS) -o $@ $<
 
 $(POSIX_BUILD)/musl_libc.ll: build_musl_lib_c_to_llvm_ll.sh
 	./build_musl_lib_c_to_llvm_ll.sh $(MUSL_LIB_C_SRC_PATH) $@
+
+
+########################################### Custom Project Rules ############################################
+
+# - simple_project -
+
+# Link
+$(OBJ_BUILD)/simple_project.ll: $(OBJ_BUILD)/simple_project/foo.ll $(OBJ_BUILD)/simple_project/bar.ll
+	@$(CREATE_DEST_DIR)
+	$(ARA_LINK) -S -o $@ $^
+
+# Compile
+$(OBJ_BUILD)/simple_project/%.ll : $(OBJ_BUILD)/simple_project/%.c
+	@$(CREATE_DEST_DIR)
+	$(CC) $(CFLAGS) -o $@ $<
